--- a/MyDocs/edu/数学_数形-总结/-11-数形-方程-0-直线-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-11-数形-方程-0-直线-概念.md
@@ -1,4 +1,4 @@
-## 方程-数形（选修1）
+## 直线图形（选修1）
 
 #### 直线
 
@@ -23,10 +23,6 @@
 推论：两条平行直线$Ax+By+C_1=0$ 与$Ax+By+C_2=0$ 间的距离为 $d=\frac{|C_1-C_2|}{\sqrt{A^2+B^2}}$
 
 
-
-#### 曲线
-
-用代数方法研究曲线的范围，就是利用方程确定曲线上点的横、纵坐标的取值范围。
 
 
 
