--- a/MyDocs/edu/数学_数形-总结/-11-数形-方程-1-曲线-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-11-数形-方程-1-曲线-1-课本练习.md
@@ -1,4 +1,6 @@
-## 圆
+## 曲线图形-课内
+
+### 圆
 
 推论：
 
@@ -42,7 +44,7 @@
 
   
 
-## 椭圆
+### 椭圆
 
 推论：
 
@@ -60,7 +62,7 @@
 
 
 
-## 双曲线
+### 双曲线
 
 推论：
 
@@ -81,7 +83,7 @@
 
 >  双曲线与直线交点的时候，考虑一下渐近线，然后再计算。
 
-## 抛物线
+### 抛物线
 
 - 抛物线$y^2=12x$ 上与焦点的距离等于9 的点的坐标是`____`
 
@@ -99,7 +101,7 @@
 
 
 
-## 综合
+### 综合
 
 推论：
 
