--- a/MyDocs/edu/数学_数形-总结/-5-图形-6-立体基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-5-图形-6-立体基础-0-概念.md
@@ -101,5 +101,5 @@
 
 #### 推论：
 
-在平面内的一条直线，如果与这个平面的一条斜线在这个平面上的射影垂直，那么它也与这条斜线垂直（三垂线定理，选修1）
+在平面内的一条直线，如果与穿过这个平面的一条斜线在这个平面上的射影垂直，那么它也与这条斜线垂直（三垂线定理，选修1）
 
