--- a/MyDocs/edu/数学_数形-总结/-5-图形-6-立体基础-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-5-图形-6-立体基础-1-课本练习.md
@@ -1,28 +1,46 @@
 ## 立体基础-课内
 
+#### 基本事实
+
 - 不共面的四点可以确定几个平面？请画出图形说明你的结论
-
 - 三个平面可以将空间分成几个部分？请分情况说明
+- 四边形是否可以确定一个平面？
 
-- 设直线a，b 分别是长方体的相邻两个面的对角线所在的直线，则a 与b是什么位置关系
+#### 点与面
+
+- 过$\triangle ABC$ 所在平面$\alpha$ 外一点P，做$PO\perp\alpha$，垂足为O，连接PA，PB，PC
+
+    （1）若PA=PB=PC，则点O 是$\triangle ABC$ 的`____` 心
+
+    （2）若PA=PB=PC，$\angle C=90^\circ$，则点O 是AB 边的`____` 心
+
+    （3）若$PA\perp PB,PB\perp PC,PC\perp PA$，垂足都为P，则点O 是$\triangle ABC$ 的`____` 心
+
+#### 面与角
+
+- 已知正方体ABCD-A'B'C'D'，求直线BA‘ 与AC 所成的角的大小
+
+#### 线与面
 
 - 已知直线a，b，平面$\alpha,\beta$，且$a\subset \alpha,b\subset\beta,\alpha//\beta$。判断直线a，b 的位置关系，并说明理由
-
-- 四边形是否可以确定一个平面？
 
 - 如图是一个正方体的展开图，
 
   <img src="image-20231123222513951.png" alt="image-20231123222513951" style="zoom:25%;" />
 
-  如果将它还原为正方体，那么在AB，CD，EF，GH 这四条线段中，哪些线段所在直线时异面直线？
+  如果将它还原为正方体，那么在AB，CD，EF，GH 这四条线段中，哪些线段所在直线是异面直线？
 
 - 在正方体ABCD-A'B'C'D' 中，E 为$DD_1$ 的中点，判断$BD_1$ 与平面AEC 的位置关系，并说明理由。
+
+#### 定理
 
 - 判断：平面$\alpha$ 与平面$\beta$ 平行的充分条件是“$\alpha$ 内有无穷多条直线都与$\beta$ 平行”
 
 - 已知m，n 为异面直线，m$\bot$ 平面$\alpha$ , n$\bot$ 平面$\beta$ 。若直线$l$ 满足$l \bot m,l \bot n, l\subsetneqq \alpha, l \subsetneqq \beta$ 则：
 
   A. $\alpha // \beta, l // \alpha$    B. $\alpha, \beta$ 相交且交线平行于$l$    C. $\alpha \bot \beta, l \bot \beta$    D. $\alpha,\beta$ 相交且交线垂直于$l$ 
+
+
 
 - 如图，在正方体ABCD-A'B'C'D' 中，M，N，E，F 分别是棱$A_1B_1,A_1D_1,B_1C_1,C_1D_1$ 的中点
 
@@ -42,14 +60,6 @@
 
   求证 $BD\perp AC'$ 
 
-- 过$\triangle ABC$ 所在平面$\alpha$ 外一点P，做$PO\perp\alpha$，垂足为O，连接PA，PB，PC
-
-  （1）若PA=PB=PC，则点O 是$\triangle ABC$ 的`____` 心
-
-  （2）若PA=PB=PC，$\angle C=90^\circ$，则点O 是AB 边的`____` 心
-
-  （3）若$PA\perp PB,PB\perp PC,PC\perp PA$，垂足都为P，则点O 是$\triangle ABC$ 的`____` 心
-
 - 如图，在四面体A-BCD 中，E、F、G分别为AB，AC，AD 上的点
 
   <img src="image-20231124214029521.png" alt="image-20231124214029521" style="zoom:25%;" />
@@ -61,8 +71,6 @@
   <img src="image-20231124214428031.png" alt="image-20231124214428031" style="zoom:25%;" />
 
   求证：$\triangle ABC \cong \triangle A'B'C'$
-
-- 已知正方体ABCD-A'B'C'D'，求直线BA‘ 与AC 所成的角的大小
 
 - 如图，在正方体$ABCD-A_1B_1C_1D_1$ 中，$O_1$ 为底面$A_1B_1C_1D_1$ 的中心
 
