--- a/MyDocs/edu/数学_数形-总结/-5-图形-7-立体-2-立体图形-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-5-图形-7-立体-2-立体图形-1-课本练习.md
@@ -1,6 +1,8 @@
-立体
+## 立体图形-课内
+
+#### 常见类型
 
 - 请举出下列错误命题的反例：
   - 有两个面平行，其他各个面都是平行四边形的多面体是棱柱
   - 有两个面平行且相似，其他各个面都是梯形的多面体是棱台
-- 
+- 设直线a，b 分别是长方体的相邻两个面的对角线所在的直线，则a 与b是什么位置关系
