--- a/MyDocs/edu/数学_数形-总结/-1-数-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-1-数-1-课本练习.md
@@ -13,7 +13,7 @@
 - 【基本】在$(-\frac{1}{2})^{-1},2^{-\frac{1}{2}},(\frac{1}{2})^{-1},2^{-1}$ 中，最大的数是
 - 【复杂】简化下列各式的值：$\sqrt[4]{(3-\pi)^4}$ ; ${\frac{16}{81}}^{-\frac{3}{4}}$ ; $(m^\frac{1}{4}n^{-\frac{3}{8}})^8$
 
-> -2,$\frac{\sqrt{2}}{2},2,\frac{1}{2}$；$\pm(3-\pi), \frac{81^3}{2},\frac{m^2}{n^3}$
+> -2,$\frac{\sqrt{2}}{2},2,\frac{1}{2}$；$\pm(3-\pi), \frac{27}{2},\frac{m^2}{n^3}$
 
 ##### 对数
 
