--- a/MyDocs/edu/数学_数形-总结/-2-代数-0-基本-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-2-代数-0-基本-1-课本练习.md
@@ -9,9 +9,10 @@
 #### 指数
 
 - 已知$a^{\frac{1}{2}}+a^{-\frac{1}{2}}=3$ ，求$a^2+a^{-2}$ 的值
-- 在$(x-1)(x-2)(x-3)(x-4)(x-5)$ 的展开式中，含$x^4$ 的项的系数是`____`
 
-> 47 ; -15 ;  
+> 47 ; 
+
+- 在$(x-1)(x-2)(x-3)(x-4)(x-5)$ 的展开式中，含$x^4$ 的项的系数是`____`
 
 - 求$(x+\frac{1}{x})^6$ 的展开式
 - 求$(2\sqrt{x}-\frac{1}{\sqrt{x}})^6$ 的展开式中$x^2$ 的系数
@@ -21,11 +22,11 @@
 - 证明：$(x-\frac{1}{x})^{2n}$ 的展开式中常数项是$(-2)^n\cdot\frac{1\times 3\times 5\times ...\times(2n-1)}{n!}$
 - 用二项式定理证明$55^{55}+9$ 能被8 整除
 
-> $x^6+6x^4+15x^2+20+15x^{-2}+6x^{-4}+x^{-6}$
+> -15 ; $x^6+6x^4+15x^2+20+15x^{-2}+6x^{-4}+x^{-6}$
 
 #### 对数
 
-- 若$lg\space a(a>0)$ 与$lg\space b(b>0)$ 互为相反数，则:
+- 若$lg\space a(a>0)$ 与$lg\space b(b>0)$ 互为相反数，则：
 
   A. a+b = 0.   B. a-b = 0.    C. ab = 1.   D.$\frac{a}{b} = 1$ 
 
