基本函数整理
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/数学_数形-总结/-12-数形-函数图像-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-12-数形-函数图像-0-概念.md
@@ -7,8 +7,11 @@
 - 方程$f(x)=0$ 有实数解 $\Leftrightarrow$ 函数$y=f(x)$ 有零点 $\Leftrightarrow$ 函数$y=f(x)$ 的图像与x 轴有公共点（必修1）
 
 - **函数零点存在定理：** 如果函数$y=f(x)$ 在区间[a, b] 上的图像是一条连续不断的曲线，且有$f(a)f(b)<0$，那么，函数$y=f(x)$ 在区间(a, b) 内至少有一个零点，即存在$c\in(a,b)$，使得$f(c)=0$，这个c 也就是方程$f(x)=0$ 的解（必修1）
+    - **二分法：**通过不断地把函数的零点所在的区间一分为二，使所得区间的两个端点逐步逼近零点，进而得到零点近似值的方法（将零点所在区间范围缩小到满足一定精确度$\varepsilon$）。（必修1）
+    
+- 偶函数，即关于y 轴对称；奇函数，即关于原点中心对称。（必修1）
 
-- **二分法：**通过不断地把函数的零点所在的区间一分为二，使所得区间的两个端点逐步逼近零点，进而得到零点近似值的方法（将零点所在区间范围缩小到满足一定精确度$\varepsilon$）。（必修1）
+    > 拓展：函数$y=f(x)$ 的图像关于点P (a,b) 成中心对称图形的充要条件是函数$y=f(x+a)-b$ 为奇函数
 
 ### 图像特性
 
