--- a/MyDocs/edu/数学_数形-总结/-12-数形-函数图像-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-12-数形-函数图像-1-课本练习.md
@@ -18,7 +18,19 @@
 
   描点画出弹簧伸长长度随拉力变化的图像，并写出一个能基本反映这一变化现象的函数解析式
 
-  
+- 有一道题，“若函数$f(x)=24ax^2+4x-1$ 在区间(-1, 1) 内恰有一个零点，求实数a 的取值范围”，某同学给出了如下解答：
+
+  由$f(-1)f(1)=(24a-5)(24a+3)<0$，解得$-\frac{1}{8}<a<\frac{5}{24}$ 。所以实数a 的范围是$(-\frac{1}{8},\frac{5}{24})$  
+
+  上述解答正确吗？若不正确，请说明理由，并给出正确的解答
+
+- 设函数$f(x)=ax^2+bx+c(a>0,b,c\in R)，且f(1)=-\frac{a}{2}$，求证：函数f(x) 在(0, 2) 内至少有一个零点
+
+- 已知函数$f(x)=x^3-2x+1$，求证：方程$f(x)=x$ 在(-1, 2) 内至少有两个实数解
+
+- 已知函数$f(x)=\begin{cases}x^2+2x-3,x\le 0\\-2+ln\space x, x>0\end{cases}$ 求使方程$f(x)=k$ 的实数解个数分别为1，2，3时k 的相应取值范围
+
+    > （先明确增减性，分类组合；
 
 #### 特性
 
