--- a/MyDocs/edu/数学_数形-总结/-8-函数-0-基本-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-8-函数-0-基本-概念.md
@@ -24,7 +24,7 @@
 
     函数图像既可以是连续的曲线，也可以是直线、折线、离散的点。（必修1）
 
-- 使用**符号**$f$ 表示对应关系：设A,B 是非空的实数集，如果对于集合A 中的任意一个数x，按照某种确定的对应关系$f$，在结合B 中都有唯一确定的数y 和它对应，那么就称$f:A\rightarrow B$ 为从集合A 到集合B 的一个函数。记作$y=f(x),x\in A$。其中x叫做自变量，x 的取值范围A 叫做函数的**定义域**，与x 的值相对应的y 值叫做函数值，函数值的集合$\{f(x)|x\in A\}$ 叫做函数的**值域**（必修1）
+- 使用**符号**$f$ 表示对应关系：设A,B 是非空的实数集，如果对于集合A 中的任意一个数x，按照某种确定的对应关系$f$，在集合B 中都有唯一确定的数y 和它对应，那么就称$f:A\rightarrow B$ 为从集合A 到集合B 的一个函数。记作$y=f(x),x\in A$。其中x叫做自变量，x 的取值范围A 叫做函数的**定义域**，与x 的值相对应的y 值叫做函数值，函数值的集合$\{f(x)|x\in A\}$ 叫做函数的**值域**（必修1）
 
     > 如果两个函数的定义域相同，并且对应关系完全一致，即相同的自变量对应的函数值也相同，那么这两个函数是同一个函数（即使抽象时的字母不同）；两个函数如果仅有对应关系相同，但定义域不相同，那么它们不是同一个函数（必修1）
     
@@ -48,11 +48,9 @@
 
     > 判断函数的奇偶性应先明确它的定义域
 
-    设函数$f(x)$ 的定义域为$I，如果\forall x\in I$，都有$-x\in I，且f(-x)=f(x)$，那么函数$f(x)$ 就叫做**偶函数**。-- 关于y 轴对称
+    设函数$f(x)$ 的定义域为$I，如果\forall x\in I$，都有$-x\in I，且f(-x)=f(x)$，那么函数$f(x)$ 就叫做**偶函数**。
 
-    设函数$f(x)$ 的定义域为$I，如果\forall x\in I$，都有$-x\in I，且f(-x)=-f(x)$，那么函数$f(x)$ 就叫做**奇函数**。-- 关于原点中心对称
-
-    > 拓展：函数$y=f(x)$ 的图像关于点P (a,b) 成中心对称图形的充要条件是函数$y=f(x+a)-b$ 为奇函数
+    设函数$f(x)$ 的定义域为$I，如果\forall x\in I$，都有$-x\in I，且f(-x)=-f(x)$，那么函数$f(x)$ 就叫做**奇函数**。
 
 - **周期性**：（必修1）
 
@@ -88,9 +86,9 @@
 
 #### 指数函数（必修1）
 
-<font color=red>这里限制底数>0，大概是因为图像的连续才好研究</font>
-
 函数$y=a^x(a>0,且a\ne 1)$ 叫作**指数函数**，其中指数x 是自变量，定义域是R
+
+> <font color=red>这里限制底数>0，大概是因为图像的连续才好研究</font>
 
 #### 对数函数（必修1）
 
