函数图像整理完毕
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/数学_数形-总结/-12-数形-函数图像-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-12-数形-函数图像-0-概念.md
@@ -23,6 +23,8 @@
 
 - 当$k>0$ 时，y 随 x 的增大而增大；当$k<0$ 时，y 随 x 的增大而减小 
 
+![image-20240804090104190](image-20240804090104190.png)
+
 #### 反比例函数（8年级下）
 
 反比例函数$y=\frac{k}{x}(k为常数，k\ne 0)$ 的图像有如下特征：
@@ -34,6 +36,8 @@
   当$k<0$时，图像在二、四象限，函数值y 随自变量x 的增大而增大。
 
 - 其图像关于直角坐标系的原点成中心对称
+
+![image-20240804095047470](image-20240804095047470.png)
 
 #### 二次函数（9年级上）
 
@@ -47,11 +51,15 @@
 
   >  就可以利用此来计算日常应用的最值问题 
 
+![image-20240804090959926](image-20240804090959926.png)
+
 #### 幂函数（必修1）
 
 - 都通过点(1,1)
 - $\alpha=2$ 时是偶函数，$\frac{1}{2}$ 时只有第一象限，其它是奇函数
 - 在$[0,+\infin)$ 上，只有$\alpha=-1$时，是单调递减。其它递增
+
+![image-20240804094017277](image-20240804094017277.png)
 
 #### 指数函数（必修1）
 
@@ -59,18 +67,18 @@
 - a<1 时，减函数；a>1 时，增函数
 - 值域都是$(0,+\infin)$
 
-
-
 底数互为倒数的两个指数函数的图像关于y 轴对称
+
+![image-20240804091301752](image-20240804091301752.png)
 
 #### 对数函数（必修1）
 
 - 过定点(1,0)
 - a<1 时，减函数；a>1 时，增函数
 
-
-
 底数互为倒数的两个对数函数的图像关于x 轴对称
+
+![image-20240804100522069](image-20240804100522069.png)
 
 ### 拓展
 
