--- a/MyDocs/edu/数学_数形-总结/-8-函数-1-基本-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-8-函数-1-基本-课本练习.md
@@ -34,16 +34,12 @@
 ### 概念性质
 
 - 已知$f(x)=\frac{2}{x-1}(x\in[2,6])$ ，求函数的最大值和最小值
-- 请说明函数$y=x+\frac{k}{x}(k>0)$ 在区间$(0, +\infin)$ 上的单调性，并证明
 - 对于函数$f(x)=a-\frac{2}{2^x+1}(a\in R)$，探索函数f(x) 的单调性；是否存在实数a 使函数f(x) 为奇函数
-- 求函数$f(x)=x+\frac{1}{x}$ 的奇偶性
 - 已知函数$y=f(x)$ 是定义在R 上周期为2 的奇函数，若$f(0.5)=1$，求$f(1),f(3.5)$ 的值
 - 当k 取什么值时，一元二次不等式$2kx^2+kx-\frac{3}{8}<0$ 对一切实数x 都成立
 
 
-> $2, \frac{2}{5}；\sqrt{k}$之前递减，后续递增；递减（先x1,x2相减，然后会转化为指数函数），存在a 为1；奇函数；0,-1（f(1)=f(1-2)；$k\in(-3,0]$
-
-
+> $2, \frac{2}{5}$；递减（先x1,x2相减，然后会转化为指数函数），存在a 为1；0,-1（f(1)=f(1-2)；$k\in(-3,0]$
 
 ### 相关
 
