圆锥曲线、数形基本整理
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/数学_数形-总结/-10-数形-0-数轴-0.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-0-数轴-0.md
@@ -57,7 +57,7 @@ x轴和y轴上的点不属于任何象限
 
 
 
-### 空间直角坐标系（选修1）
+### 空间直角坐标系（选1）
 
 以点O 为原点，以单位正交基底{**i, j, k**} 的方向为正方向，以它们的长为单位长度建立三条数轴：x 轴，y 轴，z 轴（都叫坐标轴），此时就建立了一个**空间直角坐标系**$Oxyz$，O 叫做原点，**i, j, k** 都叫做**坐标向量**。通过每两条坐标轴的平面叫做**坐标平面**，分别称作$Oxy, Oyz, Ozx$ 平面，它们把空间分为八个部分。
 
