--- a/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
@@ -1,4 +1,4 @@
-## 直线图形-课内
+## 数形-图形基础-课内
 
 推论：
 
@@ -8,13 +8,19 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 
 #### 直线
 
+- 求经过A(0,2), B(-1,0) 两点的直线的斜率k 的值
+- 已知A(1,2), B(-1,0), C(3,4) 三点，这三点是否在同一条直线上，为什么？
+- 过点$A(m^2+2,m^2-3),B(3-m-m^2,2m)$ 两点的直线 $l$ 的倾斜角为$45^\circ$，求m 的值
+- 已知点M(2,2), 和N(5,-2)，点P 在x 轴上，且$\angle MPN$ 为直角，求点P 的坐标
+- 经过点P(0，-1) 作直线 $l$ ，若直线 $l$ 与连接A(1,-2),B(2,1) 两点的线段总有公共点，求直线 $l$ 的倾斜角$\alpha$ 与斜率 $k$ 的取值范围。 
+
 - 判断下列各对直线是否平行或垂直
 
-  （1）$l_1:y=\frac{1}{2}x+3, l_2:y=\frac{1}{2}x-2$ （2）$l_1:y=\frac{5}{3}x,l_2:y=-\frac{3}{5}x$
+    （1）$l_1:y=\frac{1}{2}x+3, l_2:y=\frac{1}{2}x-2$ （2）$l_1:y=\frac{5}{3}x,l_2:y=-\frac{3}{5}x$
 
 - 根据下列条件求直线的截距式方程：
 
-  （1）在x轴，y轴上的截距分别是2，3；（2）在x轴，y轴上的截距分别是-5，6
+    （1）在x轴，y轴上的截距分别是2，3；（2）在x轴，y轴上的截距分别是-5，6
 
 - 已知两点A(7,-4),B(-5,6)，求线段AB 的垂直平分线的方程
 
@@ -40,6 +46,5 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 
 #### 曲线
 
-- 求方程$ln\space x+2x-6=0$ 的实数解的个数
 - 几何求证：当$0\lt x \lt 1,0\lt y \lt 1$ ，有$\sqrt{x^2+y^2}+\sqrt{x^2+(1-y)^2}+\sqrt{(1-x)^2+y^2} + \sqrt{(1-x)^2 + (1-y)^2} \ge 2\sqrt{2}$
 
