--- a/MyDocs/edu/数学_数形-总结/-2-代数-0-基本-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-2-代数-0-基本-0-概念.md
@@ -8,6 +8,8 @@
 
 数和字母相乘，在省略乘号时，要把数字写在字母的前面，如$n\times2$ 写成2n，一般不要写成n2  （7年级上）
 
+> $a·4$ 也可以写成$4a$ （5年级上） 
+
 绝对值表达如：$|a|= 
 \begin{cases}
 a& \text{(a} \geq \text{0)}
