--- a/MyDocs/edu/数学_数形-总结/-5-图形-0-平面基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-5-图形-0-平面基础-0-概念.md
@@ -78,9 +78,10 @@
     - 把线段向一端无限延伸，就得到一条**射线**，射线只有一个端点。可以用射线AB 来表示（A是端点，B是射线上另一点）（4年级上）表示端点的字母要写在前面（7年级上）
 
 直线可以看成是点的集合，点A在直线$l$ 上，记作$A\in l$；点B 在直线$l$ 外，记作$B\notin l$（必修2）
-一个点和一个方向确定一条直线（选修1）
 
-“两条直线”一般指两条不重合的直线（选修1）
+一个点和一个方向确定一条直线（选1）
+
+“两条直线”一般指两条不重合的直线（选1）
 
 ### 平面（必修2）
 
@@ -119,9 +120,11 @@
 
 把圆平均分成360 份，将其中1份所对的角作为度量角的单位，它的大小就是**1度**，记作$1^\circ$  (4年级上)
 
+> 这里的圆用一周角的概念也行（个人）
+
 把$1^\circ$ 的角分成60份，每一份就是**1分**，记作1‘ ，把1分的角再等分成60份，每一份就是**1秒**，记作1‘’ 。（7年级上）
 
-> 这里的分秒和时间的能重合理解？
+> 这里的分秒和时间的能重合理解，因为是60进制？
 
 
 
@@ -135,12 +138,6 @@
 
 > 为了简单起见，在不引起混淆的前提下，角$\alpha$ 或者$\angle \alpha$ 可以简记称 $\alpha$ （必修1）用字母也一样，如C（必修2）  
 
-**弧度制**：（必修1）
-
-长度等于半径长的圆弧所对的圆心角叫做**1弧度**的角。弧度单位用符号rad 表示，读作弧度。
-
-在半径为r 的圆中，弧长为$l$ 的弧所对的圆心角为$\alpha$ rad，那么$|\alpha|=\frac{l}{r}$ 。正角的弧度数是一个正数，负角的弧度数是一个负数，零角度弧度数是0。 
-
 
 
 零角 = $0^\circ$（必修1）
@@ -150,12 +147,6 @@
 等于90度的角是**直角**，小于直角的角是**锐角**，大于直角而小于平角的角是**钝角**（7年级上）
 
 直角可以表示为：$Rt\angle$（8年级上）
-
-
-
-**弧度和角度的转换**：$180^\circ=\pi $ rad （必修1）
-
-弧度制表示角的时候，“弧度”二字或者“rad” 通常略去不写，而只写该角所对应的弧度数。（必修1）
 
 
 
