--- a/MyDocs/edu/数学_数形-总结/-5-图形-4-圆锥曲线-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-5-图形-4-圆锥曲线-1-课本练习.md
@@ -5,3 +5,5 @@
   <img src="image-20240322164558404.png" alt="image-20240322164558404" style="zoom:25%;" />
 
   当点P 在圆上运动时，点Q 的轨迹是什么？为什么？
+
+- 依据上面的方式，有没有可能绘制另一个曲线？
