--- a/MyDocs/edu/数学_数形-总结/-8-函数-1-基本-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-8-函数-1-基本-课本练习.md
@@ -22,7 +22,7 @@
 
     A. $y=2^x$    B. $y=x^2$    C. $y=log_2x$    D. $y=2x$
 
-- 已知函数$y=f(x),x\in R$ 且 $f(0)=3,\frac{f(0.5)}{f(0)}=2,\frac{f(1)}{f(0.5)}=2,...,\frac{f(0.5n)}{f(0.5(n-1))}=2,m\in N^*$，求函数$y=f(x)$ 的一个解析式
+- 已知函数$y=f(x),x\in R$ 且 $f(0)=3,\frac{f(0.5)}{f(0)}=2,\frac{f(1)}{f(0.5)}=2,...,\frac{f(0.5n)}{f(0.5(n-1))}=2,n\in N^*$，求函数$y=f(x)$ 的一个解析式
 
 - 设$f(x)=\frac{e^x-e^{-x}}{2},g(x)=\frac{e^x+e^{-x}}{2}$，求证：
 
