--- a/MyDocs/edu/数学_数形-总结/2-向量-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/2-向量-0-概念.md
@@ -22,15 +22,15 @@
 
 
 
-平行于同一个平面的向量，叫做**共面向量**。（选修1）
+平行于同一个平面的向量，叫做**共面向量**。（选1）
 
 > 任意两个空间向量都可以平移到同一个平面内，成为同一个平面内的两个向量
 
 
 
-已知两个非零向量**a**，**b**，O是平面上的任意一点，作$\vec{OA}=$**a**,$\vec{OB}=$**b**，则$\angle AOB=\theta(0\le\theta\le\pi)$ 叫做向量**a** 与**b** 的**夹角**。（必修2）
+已知两个非零向量**a**，**b**，O是平面上的任意一点，作$\vec{OA}=$**a**,$\vec{OB}=$**b**，则$\angle AOB=\theta(0\le\theta\le\pi)$ 叫做向量**a** 与**b** 的**夹角**。（必2）
 
-夹角可记作<**a**, **b**>（选修1）
+夹角可记作<**a**, **b**>（选1）
 
 > 理解一下同向、反向、垂直时，夹角各为多少
 
@@ -109,7 +109,7 @@
 
 推论：平行四边形ABCD，其对角线的平方和，等于边长平方和：$AC^2+BD^2=2(AB^2+AD^2)$
 
-> 也可以用坐标法证明（选修1）
+> 也可以用坐标法证明（选1）
 
 
 
