--- a/MyDocs/edu/数学_数形-总结/-10-数形-1-直线-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-1-直线-0-概念.md
@@ -2,7 +2,7 @@
 
 点M 的**轨迹方程** 是指点M 的坐标(x,y) 满足的关系式。轨迹是指点在运动变化过程中形成的图形，在解析几何中，常把图形看作点的轨迹（集合）。
 
-### 直线（选修1）
+### 直线（选1）
 
 在平面直角坐标系中，规定水平直线的方向向右，其他直线向上的方向为这条直线的方向。
 
@@ -19,6 +19,28 @@
 
 
 在直角坐标系中画直线时，通常找出直线与两条坐标轴的交点，然后连接这两个点。
+
+
+
+- 把方程 $y-y_0=k(x-x_0)$ 称为过点$P_0(x_0,y_0)$，斜率为k 的直线 $l$ 的方程，叫做直线的**点斜式方程**，简称点斜式
+
+    当倾斜角为$90^\circ$ 时，不能用点斜式表示，方程为：$x=x_0$
+
+- 把直线 $l$ 与y 轴的交点（0，b）的纵坐标b 叫做直线与y 轴的**截距**，把交点代入点斜式方程，得到方程 $y=kx+b$，叫做**斜截式方程**，简称斜截式 
+
+- 经过两点$P_1(x_1,y_1),P_2(x_2,y_2)(x_1\ne x_2,y_1\ne y_2)$  的直线方程为：$\frac{y-y_1}{y_2-y_1}=\frac{x-x_1}{x_2-x_1}$，叫做直线的**两点式方程**，简称两点式
+
+- 直线 $l$ 与x 轴的交点（a，0）的横坐标a 叫做直线在x 轴的截距，同时y 轴截距为b，那么得到方程: $\frac{x}{a} + \frac{y}{b}=1$，叫做**截距式方程**，简称截距式
+
+- 把关于x，y 的二元一次方程：$Ax+By+C=0$ （其中A，B不同时为0）叫做直线的**一般式方程**，简称一般式
+
+
+
+##### 距离
+
+点$P(x_0,y_0)$ 到直线$l:Ax+By+C=0$ 的距离：$d=\frac{|Ax_0+By_0+C|}{\sqrt{A^2+B^2}}$ （当A 或B 为0 时也成立）
+
+推论：两条平行直线$Ax+By+C_1=0$ 与$Ax+By+C_2=0$ 间的距离为 $d=\frac{|C_1-C_2|}{\sqrt{A^2+B^2}}$
 
 
 
