--- a/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
@@ -9,9 +9,15 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 #### 直线
 
 - 求经过A(0,2), B(-1,0) 两点的直线的斜率k 的值
+
 - 已知A(1,2), B(-1,0), C(3,4) 三点，这三点是否在同一条直线上，为什么？
+
 - 过点$A(m^2+2,m^2-3),B(3-m-m^2,2m)$ 两点的直线 $l$ 的倾斜角为$45^\circ$，求m 的值
+
+    > m=-2
+
 - 已知点M(2,2), 和N(5,-2)，点P 在x 轴上，且$\angle MPN$ 为直角，求点P 的坐标
+
 - 经过点P(0，-1) 作直线 $l$ ，若直线 $l$ 与连接A(1,-2),B(2,1) 两点的线段总有公共点，求直线 $l$ 的倾斜角$\alpha$ 与斜率 $k$ 的取值范围。 
 
 - 判断下列各对直线是否平行或垂直
@@ -22,7 +28,9 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 
     （1）在x轴，y轴上的截距分别是2，3；（2）在x轴，y轴上的截距分别是-5，6
 
-- 已知两点A(7,-4),B(-5,6)，求线段AB 的垂直平分线的方程
+- 【点斜式】已知两点A(7,-4),B(-5,6)，求线段AB 的垂直平分线的方程
+
+    > $y-1 = \frac{6}{5}(x-1)$
 
 - 设直线$l$ 的方程为$x-y\cdot sin\theta+2=0$，则直线$l$ 的倾斜角$\alpha$ 的范围是：`____`
 
@@ -42,9 +50,7 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 
 - 已知$\triangle ABC$ 的三个顶点分别是A(1,3), B(3,1), C(-1,0)，求$\triangle ABC$ 的面积
 
+#### 几何求证
 
-
-#### 曲线
-
-- 几何求证：当$0\lt x \lt 1,0\lt y \lt 1$ ，有$\sqrt{x^2+y^2}+\sqrt{x^2+(1-y)^2}+\sqrt{(1-x)^2+y^2} + \sqrt{(1-x)^2 + (1-y)^2} \ge 2\sqrt{2}$
+- 当$0\lt x \lt 1,0\lt y \lt 1$ ，有$\sqrt{x^2+y^2}+\sqrt{x^2+(1-y)^2}+\sqrt{(1-x)^2+y^2} + \sqrt{(1-x)^2 + (1-y)^2} \ge 2\sqrt{2}$
 
