主要證明一個拓展結論
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
@@ -2,7 +2,32 @@
 
 推论：
 
-$\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的，除2x+y+2=0 以外的所有直线（有点没看明白）
+**过两条直线交点的直线系方程**：
+
+$\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的，除2x+y+2=0 以外的所有直线
+
+> 易转化为两条直线$l_1:a_1x+b_1y+c_1=0$ 以及$l_2:-\lambda(a_2x+b_2y+c_2)=0$ 的交点，好理解（解方程时，后者可以直接去掉$-\lambda$）
+>
+> 转化为一般方程：
+>
+> $l_3:(a_1-\lambda a_2)x+(b_1-\lambda b_2)y + c_1-\lambda c_2=0$
+>
+> 进而考虑斜截式方程：
+>
+> - 讨论 $b_1,b_2$ 为零的情况
+> - 讨论 $l_1,l_2$ 平行的情况
+>
+> - 若$b_1-\lambda b_2=0$，则 $l_3$ 为平行于y 轴的一条直线
+>
+>     否则 $l_3$ 斜率为
+>     $$
+>     -\frac{a_1-\lambda a_2}{b_1-\lambda b_2} = -\frac{a_1-a_2\cdot \frac{b_1}{b_2}+a_2\cdot\frac{(b_1-\lambda b_2)}{b_2}}{b_1-\lambda b_2}=-\frac{a_1-a_2\cdot\frac{b_1}{b_2}}{b_1-\lambda b_2} - \frac{a_2}{b_2}
+>     $$
+>     用$k_1,k_2$ 表示原式斜率，则上式为：
+>     $$
+>     k_2-\frac{a_1-a_2\cdot \frac{b_1}{b_2}}{b_1\lambda b_2}=k_2-\frac{\frac{a1}{b1}-\frac{a_2}{b_2}}{\lambda b_2}=k2-\frac{k2-k1}{\lambda b_2}
+>     $$
+>     因为$k2\ne k1$，所以结果 $l_3$ 的斜率不等于$k_2$
 
 ### 练习
 
@@ -10,11 +35,13 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 
 - 求经过A(0,2), B(-1,0) 两点的直线的斜率k 的值
 
-- 已知A(1,2), B(-1,0), C(3,4) 三点，这三点是否在同一条直线上，为什么？
 
-- 过点$A(m^2+2,m^2-3),B(3-m-m^2,2m)$ 两点的直线 $l$ 的倾斜角为$45^\circ$，求m 的值
+- 【斜率】已知A(1,2), B(-1,0), C(3,4) 三点，这三点是否在同一条直线上，为什么？
+
+- 【角度】过点$A(m^2+2,m^2-3),B(3-m-m^2,2m)$ 两点的直线 $l$ 的倾斜角为$45^\circ$，求m 的值
 
     > m=-2
+
 
 - 已知点M(2,2), 和N(5,-2)，点P 在x 轴上，且$\angle MPN$ 为直角，求点P 的坐标
 
@@ -42,7 +69,7 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 
 - 经过两条直线$2x-3y+10=0,3x+4y-2=0$ 的交点，且垂直于直线$3x-2y+4=0$ 的方程
 
-- 已知$\triangle ABC$ 的顶点A(5,1)，边AB 上的 中线CM 所在直线方程为2x-y-5=0，边AC 上的高BH 所在直线方程为x-2y-5=0，求（1）顶点C 的坐标；（2）直线BC 的方程
+- 【复杂】已知$\triangle ABC$ 的顶点A(5,1)，边AB 上的 中线CM 所在直线方程为2x-y-5=0，边AC 上的高BH 所在直线方程为x-2y-5=0，求（1）顶点C 的坐标；（2）直线BC 的方程
 
 - 已知倾斜角为$60^\circ$ 的直线$l$ ，其上两点A、B的横坐标满足$7x^2+12x+4=0$，求线段AB的长
 
