--- a/MyDocs/edu/数学_数形-总结/-11-数形-圆锥曲线-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-11-数形-圆锥曲线-概念.md
@@ -12,10 +12,6 @@
 
 
 
-圆与圆的关系
-
-
-
 ### 椭圆（选1）
 
 设M(x,y) 是椭圆上任意一点，椭圆的焦距为2c（c>0），那么焦点$F_1,F_2$ 的坐标分别为(-c,0),(c,0)，根据椭圆的定义，设点M 与焦点$F_1,F_2$ 的距离的和等于2a。令$b=\sqrt{a^2-c^2}$，有**椭圆的标准方程**：$\frac{x^2}{a^2}+\frac{y^2}{b^2}=1(a>b>0)$
@@ -63,7 +59,7 @@
 
 把平面内与一个定点F 和一条定直线$l$（不经过点F）的距离相等的点的轨迹叫做**抛物线**，点F 叫做**抛物线的焦点**，直线$l$ 叫做**抛物线的准线。**
 
-设M(x,y) 是抛物线上任意一点，焦点到直线的距离为p，那么焦点F 的坐标为$(\frac{p}{2},0)$，准线$l$ 的方程为$x=\frac{p}{2}$，有**抛物线的标准方程：**$y^2=2px(p>0)$
+设M(x,y) 是抛物线上任意一点，焦点到直线的距离为p，那么焦点F 的坐标为$(\frac{p}{2},0)$，准线$l$ 的方程为$x=-\frac{p}{2}$，有**抛物线的标准方程：**$y^2=2px(p>0)$
 
 
 
