--- a/MyDocs/edu/数学_数形-总结/-11-数形-圆锥曲线-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-11-数形-圆锥曲线-课本练习.md
@@ -8,11 +8,11 @@
 
 如果四边形一组对边的平方和等于另一组对边的平方和，那么它的对角线垂直
 
+#### 练习
 
+- 【换元】直线$l:(2m+1)x+(m+1)y-7m-4=0$ ，求证其恒过定点，并求出该点。
 
-- 直线$l:(2m+1)x+(m+1)y-7m-4=0$ ，求证其恒过定点，并求出该点。
-
-- $\triangle ABC$ 的三个顶点分别为A(5,1), B(7,-3), C(2,-8)，求$\triangle ABC$ 的外接圆的标准方程
+- 【几何】$\triangle ABC$ 的三个顶点分别为A(5,1), B(7,-3), C(2,-8)，求$\triangle ABC$ 的外接圆的标准方程
 
 - 已知线段AB 的端点B 的坐标是(4,3)，端点A 在圆$(x+1)^2+y^2=4$ 上运动，求线段AB 的中点M 的轨迹方程
 
@@ -52,7 +52,7 @@
 
 椭圆的长轴顶点，是距离焦点最远和最近的两个点
 
-
+#### 练习
 
 - 已知椭圆的两个焦点坐标分别是(-2,0),(2,0)，并且经过点$(\frac{5}{2},-\frac{3}{2})$，求它的标准方程
 - 如果椭圆$\frac{x^2}{100}+\frac{y^2}{36}=1$ 上一点P 与焦点$F_1$ 的距离等于6，那么点P 与另一个焦点$F_2$ 的距离是`____`
@@ -107,7 +107,7 @@
 
 过抛物线的焦点做直线与抛物线相交与AB 线段，并以此为直径画圆，与抛物线的准线相切；椭圆则相离；双曲线则相交
 
-
+#### 练习
 
 - 如果点M(x,y) 在运动过程中，总满足关系式：$\sqrt{x^2+(y-3)^2}+\sqrt{x^2+(y+3)^2}=10$。那么点M 点轨迹是什么曲线？
 - 一动圆与圆$x^2+y^2+6x+5=0$ 外切，同时与圆$x^2+y^2-6x-91=0$ 内切，求动圆圆心的轨迹方程。
