--- a/MyDocs/edu/数学_数形-总结/-10-数形-1-直线-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-1-直线-0-概念.md
@@ -2,6 +2,12 @@
 
 点M 的**轨迹方程** 是指点M 的坐标(x,y) 满足的关系式。轨迹是指点在运动变化过程中形成的图形，在解析几何中，常把图形看作点的轨迹（集合）。
 
+### 点
+
+对于坐标平面内任何一点，可以确定它的坐标；对于任何一个坐标，可以在坐标平面内确定它所表示的点。
+
+平面上任意两点$P_1(x_1,y_1), P_2(x_2,y_2) 间的距离公式P_1P_2 = \sqrt{(x_2-x_1)^2+(y_2-y_1)^2}$ （必修1）
+
 ### 直线（选1）
 
 在平面直角坐标系中，规定水平直线的方向向右，其他直线向上的方向为这条直线的方向。
