--- a/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-10-数形-2-直线-1-课本练习.md
@@ -15,6 +15,7 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 > 进而考虑斜截式方程：
 >
 > - 讨论 $b_1,b_2$ 为零的情况
+>
 > - 讨论 $l_1,l_2$ 平行的情况
 >
 > - 若$b_1-\lambda b_2=0$，则 $l_3$ 为平行于y 轴的一条直线
@@ -29,53 +30,69 @@ $\lambda$是变化的数，$3x+4y-2+\lambda(2x+y+2)=0$ 表示经过点(-2,2) 的
 >     $$
 >     因为$k2\ne k1$，所以结果 $l_3$ 的斜率不等于$k_2$
 
+> 那么请问，两个的交点，是因为常量部分 $l_1$ 为 -2，$l_2$ 为 2 吗
+
 ### 练习
+
+### 点
+
+- 已知点M(2,2), 和N(5,-2)，点P 在x 轴上，且$\angle MPN$ 为直角，求点P 的坐标
+
+> (1,0) 或 (6,0)
 
 #### 直线
 
 - 求经过A(0,2), B(-1,0) 两点的直线的斜率k 的值
 
 
-- 【斜率】已知A(1,2), B(-1,0), C(3,4) 三点，这三点是否在同一条直线上，为什么？
-
 - 【角度】过点$A(m^2+2,m^2-3),B(3-m-m^2,2m)$ 两点的直线 $l$ 的倾斜角为$45^\circ$，求m 的值
-
-    > m=-2
-
-
-- 已知点M(2,2), 和N(5,-2)，点P 在x 轴上，且$\angle MPN$ 为直角，求点P 的坐标
-
+- 设直线$l$ 的方程为$x-y\cdot sin\theta+2=0$，则直线$l$ 的倾斜角$\alpha$ 的范围是：`____`
 - 经过点P(0，-1) 作直线 $l$ ，若直线 $l$ 与连接A(1,-2),B(2,1) 两点的线段总有公共点，求直线 $l$ 的倾斜角$\alpha$ 与斜率 $k$ 的取值范围。 
+
+
+> 2；m=-2；$[45^\circ,90^\circ]\cup[-45^\circ,-90^\circ];\alpha \in[45^\circ,45^\circ],k\in[-1,1]$
+
+
+- 【定义】已知A(1,2), B(-1,0), C(3,4) 三点，这三点是否在同一条直线上，为什么？
+
 
 - 判断下列各对直线是否平行或垂直
 
     （1）$l_1:y=\frac{1}{2}x+3, l_2:y=\frac{1}{2}x-2$ （2）$l_1:y=\frac{5}{3}x,l_2:y=-\frac{3}{5}x$
 
-- 根据下列条件求直线的截距式方程：
+- 已知直线$l_1,l_2$ 的方程分别是：$l_1:A_1x+B_1y+C_1=0(A_1,B_1 不同时为0)，l_2:A_2x+B_2y+C_2=0(A_2,B_2不同时为0),且A_1A_2+B_1B_2=0$，求证 $l_1\bot l_2$
+
+- 设点$P_0(x_0,y_0)$ 在直线$Ax+By+C=0$ 上，求证这条直线的方程还可以写成：$A(x-x_0)+B(y-y_0)=0$
+
+- 【截距式】根据下列条件求直线的截距式方程：
 
     （1）在x轴，y轴上的截距分别是2，3；（2）在x轴，y轴上的截距分别是-5，6
 
 - 【点斜式】已知两点A(7,-4),B(-5,6)，求线段AB 的垂直平分线的方程
 
-    > $y-1 = \frac{6}{5}(x-1)$
-
-- 设直线$l$ 的方程为$x-y\cdot sin\theta+2=0$，则直线$l$ 的倾斜角$\alpha$ 的范围是：`____`
-
-- 设点$P_0(x_0,y_0)$ 在直线$Ax+By+C=0$ 上，求证这条直线的方程还可以写成：$A(x-x_0)+B(y-y_0)=0$
-
-- 已知直线$l_1,l_2$ 的方程分别是：$l_1:A_1x+B_1y+C_1=0(A_1,B_1 不同时为0)，l_2:A_2x+B_2y+C_2=0(A_2,B_2不同时为0),且A_1A_2+B_1B_2=0$，求证 $l_1\bot l_2$
-
 - 直线$l$ 经过原点，且经过直线 2x-2y-1=0 与直线 6x-4y+1=0 的交点，求直线$l$ 的方程
 
 - 经过两条直线$2x-3y+10=0,3x+4y-2=0$ 的交点，且垂直于直线$3x-2y+4=0$ 的方程
 
-- 【复杂】已知$\triangle ABC$ 的顶点A(5,1)，边AB 上的 中线CM 所在直线方程为2x-y-5=0，边AC 上的高BH 所在直线方程为x-2y-5=0，求（1）顶点C 的坐标；（2）直线BC 的方程
+> $\frac{x}{2}+\frac{y}{3}=1,\frac{x}{-5}+\frac{y}{6}=1;y-1 = \frac{6}{5}(x-1);y=\frac{4}{3}x;y-2=-\frac{2}{3}(x+2)$
+
 
 - 已知倾斜角为$60^\circ$ 的直线$l$ ，其上两点A、B的横坐标满足$7x^2+12x+4=0$，求线段AB的长
+- 【复杂】已知$\triangle ABC$ 的顶点A(5,1)，边AB 上的 中线CM 所在直线方程为2x-y-5=0，边AC 上的高BH 所在直线方程为x-2y-5=0，求（1）顶点C 的坐标；（2）直线BC 的方程
+
+> $\frac{4}{7}\sqrt{6};(\frac{5}{3},-\frac{5}{3}),\frac{y-5}{x-3}=\frac{y+\frac{5}{3}}{x-\frac{5}{3}}(先由高易得AM 直线，结合CM 算出M，再对称算出B,然后两点式$
 
 ##### 距离
 
 - 已知$\triangle ABC$ 的三个顶点分别是A(1,3), B(3,1), C(-1,0)，求$\triangle ABC$ 的面积
+
+> 5
+
+##### 其他
+
+【换元】直线$l:(2m+1)x+(m+1)y-7m-4=0$ ，求证其恒过定点，并求出该点。
+
+> (3, 1)
 
 #### 几何求证
 
