--- a/MyDocs/edu/数学_数形-总结/-11-数形-圆锥曲线-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/-11-数形-圆锥曲线-课本练习.md
@@ -10,39 +10,44 @@
 
 #### 练习
 
-- 【换元】直线$l:(2m+1)x+(m+1)y-7m-4=0$ ，求证其恒过定点，并求出该点。
+- 【圆心】已知圆$x^2+y^2=4; x^2+y^2+4x-4y+4=0$ 关于直线$l$ 对称，求直线$l$ 的方程
+- 赵州桥的跨度是37.4 m，圆拱高约为7.2 m，求这座圆拱桥的拱圆的方程
+- 已知动点M 与两个定点O(0,0), A(3,0) 的距离的比为$\frac{1}{2}$，求动点M 的轨迹方程，并说明轨迹的形状
 
-- 【几何】$\triangle ABC$ 的三个顶点分别为A(5,1), B(7,-3), C(2,-8)，求$\triangle ABC$ 的外接圆的标准方程
+> 略；$(x+1)^2+y^2=4$
 
-- 已知线段AB 的端点B 的坐标是(4,3)，端点A 在圆$(x+1)^2+y^2=4$ 上运动，求线段AB 的中点M 的轨迹方程
+- 【外接圆】$\triangle ABC$ 的三个顶点分别为A(5,1), B(7,-3), C(2,-8)，求$\triangle ABC$ 的外接圆的标准方程
 
 - 如图，在四边形ABCD 中，AB=6，CD=3，且AB//CD，AD=BC，AB 与CD 间的距离为3。
 
-  <img src="image-20240319175542003.png" alt="image-20240319175542003" style="zoom:33%;" />
+    <img src="image-20240319175542003.png" alt="image-20240319175542003" style="zoom:33%;" />
 
-  求等腰梯形ABCD 的外接圆的方程，并求这个圆的圆心坐标和半径
+    求等腰梯形ABCD 的外接圆的方程，并求这个圆的圆心坐标和半径
 
-- 已知动点M 与两个定点O(0,0), A(3,0) 的距离的比为$\frac{1}{2}$，求动点M 的轨迹方程，并说明轨迹的形状
+> $(x-2)^2+(y+3)^2=5^2; (0, \frac{3}{8}),\frac{3}{8}\sqrt{65}$
 
-- 已知直线$l$：3x+y-6=0 和圆心为C 的圆$x^2+y^2-2y-4=0$，判断直线$l$ 与圆C 的位置关系。如果相交，求直线$l$ 被圆C 所截得的弦长。
+- 【换元】已知线段AB 的端点B 的坐标是(4,3)，端点A 在圆$(x+1)^2+y^2=4$ 上运动，求线段AB 的中点M 的轨迹方程
+
+> $(x-\frac{3}{2})^2+(y-\frac{3}{2}^2)=1$
+
+- 【位置关系】已知直线$l$：3x+y-6=0 和圆心为C 的圆$x^2+y^2-2y-4=0$，判断直线$l$ 与圆C 的位置关系。如果相交，求直线$l$ 被圆C 所截得的弦长。
 
 - 过点P(2,1) 作圆O：$x^2+y^2=1$ 的切线$l$，求切线$l$ 的方程
 
-- 赵州桥的跨度是37.4 m，圆拱高约为7.2 m，求这座圆拱桥的拱圆的方程
+> $\frac{2}{\sqrt{10}}; y=1 或y-1=\frac{4}{3}(x-2)$(直接方程不好解，设线方程，求原点到线的距离好
 
 - 已知圆$C_1:x^2+y^2+2x+3y+1=0;C_2:x^2+y^2+4x+4y+2=0$，证明圆$C_1、C_2$ 相交，并求其公共弦所在直线的方程
-
 - 求圆心在直线3x-y=0 上，与x 轴相切，且被直线x-y=0 截得的弦长为$2\sqrt{7}$ 的圆的方程
-
 - 求圆$C:x^2+y^2-x+2y=0$ 关于直线$l:x-y+1=0$ 对称的圆的方程
 
-- 已知圆$x^2+y^2=4,直线l:y=x+b$，问b 为何值时，圆上恰有三个点到直线$l$ 的距离都等于1？
+> $y+\frac{2}{5}\sqrt{5}+1=-2(x-\frac{\sqrt{5}}{5})$；圆心为(1,3) 或者(-1,-3)，半径为3 的圆；关键找对称点，为$(-2,\frac{3}{2})$
 
-- 已知圆$x^2+y^2=4; x^2+y^2+4x-4y+4=0$ 关于直线$l$ 对称，求直线$l$ 的方程
-
+- 【图像】已知圆$x^2+y^2=4,直线l:y=x+b$，问b 为何值时，圆上恰有三个点到直线$l$ 的距离都等于1？
 - 求曲线$x^2+y^2=|x|+|y|$ 围成的图形的面积
 
-  
+> $b=\pm\sqrt{2}$（都是直接说圆心到直线距离为1，但是没有代数证明过程；$2+\pi$（分类讨论，是4瓣花的形状
+
+​    
 
 ### 椭圆
 
